--- a/travis.yml
+++ b/travis.yml
@@ -11,20 +11,10 @@ matrix:
       osx_image: xcode7.2
         
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh &> /dev/null;
-    elif [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
-      curl https://repo.continuum.io/miniconda/Miniconda2-latest-MacOSX-x86_64.sh -o miniconda.sh &> /dev/null;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda &> /dev/null
-  - export PATH=$HOME/miniconda/bin:$PATH
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda &> /dev/null;
-  - conda info -a &> /dev/null;
-  - conda install conda-build=2.0.2 &> /dev/null;
-
-install:
-  - pip install python-coveralls &> /dev/null;
+  - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
+  - cd config-travis
+  - bash config.sh &> /dev/null
+  - cd ..
 
 script:
   - cd conda
