--- a/travis.yml
+++ b/travis.yml
@@ -10,7 +10,7 @@ matrix:
     - os: osx
       osx_image: xcode7.2
         
-before_install:
+install:
   - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
   - cd config-travis
   - eval config.sh
