--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ platform:
 
 environment:
   matrix:
+    - BUILD_TARGETS: libboost python-scons
     - BUILD_TARGETS: libboost
     - BUILD_TARGETS: python-scons
     
