--- a/travis.yml
+++ b/travis.yml
@@ -16,24 +16,27 @@
 
 language: cpp
 
-env:
-  - BUILD_TARGETS="python-parse"
-  - BUILD_TARGETS="python-pkgtk"
-
 matrix:
   include:
     - os: linux
       dist: trusty
       sudo: required
-      services:
-        - docker
+      env: BUILD_TARGETS="python-parse"
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: BUILD_TARGETS="python-pktk"
     - os: osx
       osx_image: xcode7.2
+      env: BUILD_TARGETS="python-parse"
+    - os: osx
+      osx_image: xcode7.2
+      env: BUILD_TARGETS="python-pktk"
 
 install:
   - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
   - cd config-travis
-  - eval config.sh
+  - source config.sh
   - cd ..
   
 script:
