--- a/travis.yml
+++ b/travis.yml
@@ -25,13 +25,13 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-      env: BUILD_TARGETS="python-pktk"
+      env: BUILD_TARGETS="python-pkgtk"
     - os: osx
       osx_image: xcode7.2
       env: BUILD_TARGETS="python-parse"
     - os: osx
       osx_image: xcode7.2
-      env: BUILD_TARGETS="python-pktk"
+      env: BUILD_TARGETS="python-pkgtk"
 
 install:
   - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
