--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ install:
 build_script:
   - cd conda
   - echo echo ON >> tmp.bat
+  - powershell -Command "(gc bld.bat) -replace 'build', 'build --no-test' | Out-File bld.bat"
   - more +8 "bld.bat" >> tmp.bat
   - del bld.bat
   - more tmp.bat >> bld.bat
@@ -18,5 +19,7 @@ build_script:
   
 on_success:
   - cd conda
+  - powershell -Command "(gc bld.bat) -replace 'build', 'build --no-test' | Out-File bld.bat"
+  - '%CMD_IN_ENV% call bld.bat'
   - if "%APPVEYOR_REPO_BRANCH%"=="master" if not "%ANACONDA_USERNAME%"=="" if not "%ANACONDA_PASSWORD%"=="" call upload.bat
   - cd ..
