--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ build_script:
   
 on_success:
   - cd conda
-  - powershell -Command "(gc bld.bat) -replace 'build', 'build --no-test' | Out-File bld.bat"
+  - powershell -Command "(gc bld.bat) -replace 'build --no-test', 'build' | Out-File bld.bat"
   - more bld.bat >> tmp.bat
   - del bld.bat
   - more tmp.bat >> bld.bat
