--- a/travis.yml
+++ b/travis.yml
@@ -41,6 +41,7 @@ script:
 after_success:
   - pkgtk authors
   - cd conda
+  - bash install.sh
   - sed -i'' -e 's/build --no-test/build/g' build.sh
   - export BUILD_TARGETS="python-pkgtk"
   - bash build.sh
