--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,7 @@ build_script:
 on_success:
   - cd conda
   - call install.bat
+  - call pkgtk authors
   - powershell -Command "(gc bld.bat) -replace 'build --no-test', 'build' | Out-File bld.bat"
   - more bld.bat >> tmp.bat
   - del bld.bat
