--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,9 @@ build_script:
 on_success:
   - cd conda
   - call install.bat
+  - cd ..
   - call pkgtk authors
+  - cd conda
   - powershell -Command "(gc bld.bat) -replace 'build --no-test', 'build' | Out-File bld.bat"
   - more bld.bat >> tmp.bat
   - del bld.bat
