--- a/travis.yml
+++ b/travis.yml
@@ -48,8 +48,10 @@ after_success:
   - sed -i'' -e 's/build --no-test/build/g' build.sh
   - export BUILD_TARGETS="python-pkgtk"
   - bash build.sh
-  - if [[ "$TRAVIS_OS_NAME" = "linux"]]; then
-     cd .. && coveralls --rcfile=.coveragerc; cd conda;
+  - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
+      cd ..;
+      coveralls --rcfile=.coveragerc;
+      cd conda;
     fi
   - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
       bash upload.sh;
