--- a/conda/python-pkgtk/meta.yaml
+++ b/conda/python-pkgtk/meta.yaml
@@ -50,7 +50,7 @@ test:
     commands:
         - cd {{ SRC_DIR }}
         - nosetests test -x -s -v --with-coverage --cover-tests --cover-package=pkgtk --cover-package=test
-        - REPOSITORY_DIR=`readlink -e $RECIPE_DIR/../..`
-        - sed -i -e 's#'"$PREFIX"'/lib/python2.7/site-packages/PkgTk-0.0.0-py2.7.egg#'"$REPOSITORY_DIR"'/src/py#g' .coverage
-        - sed -i -e 's#'"$SRC_DIR"'#'"$REPOSITORY_DIR"'#g' .coverage
-        - mv .coverage $REPOSITORY_DIR
+        - REPOSITORY_DIR=`readlink -e $RECIPE_DIR/../..` # [linux]
+        - sed -i -e 's#'"$PREFIX"'/lib/python2.7/site-packages/PkgTk-0.0.0-py2.7.egg#'"$REPOSITORY_DIR"'/src/py#g' .coverage # [linux]
+        - sed -i -e 's#'"$SRC_DIR"'#'"$REPOSITORY_DIR"'#g' .coverage # [linux]
+        - mv .coverage $REPOSITORY_DIR # [linux]
