--- a/travis.yml
+++ b/travis.yml
@@ -41,14 +41,14 @@ script:
 
 after_success:
   - cd conda
-  - bash install.sh
-  - cd ..
-  - pkgtk authors
-  - cd conda
-  - sed -i'' -e 's/build --no-test/build/g' build.sh
-  - export BUILD_TARGETS="python-pkgtk"
-  - bash build.sh
   - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
+      bash install.sh;
+      cd ..;
+      pkgtk authors;
+      cd conda;
+      sed -i'' -e 's/build --no-test/build/g' build.sh;
+      export BUILD_TARGETS="python-pkgtk";
+      bash build.sh;
       cd ..;
       coveralls --config_file=.coveragerc;
       cd conda;
