--- a/travis.yml
+++ b/travis.yml
@@ -5,11 +5,23 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
+      env: BUILD_TARGETS="libboost"
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: BUILD_TARGETS="python-scons"
+    - os: linux
+      dist: trusty
+      sudo: required
       services:
         - docker
     - os: osx
       osx_image: xcode7.2
-        
+      env: BUILD_TARGETS="libboost"
+    - os: osx
+      osx_image: xcode7.2   
+      env: BUILD_TARGETS="python-scons"
+
 install:
   - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
   - cd config-travis
@@ -28,7 +40,7 @@ after_success:
       bash upload.sh;
       cd ..;
     fi
-  - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
+  - if [[ -z $BUILD_TARGETS ]] && [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
       docker build -t statiskit/ubuntu .;
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
       docker push statiskit/ubuntu;
