--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ install:
   - cd config-appveyor
   - call config.bat
   - cd ..
+  - conda install conda-build=2.0.0
 
 build_script:
   - cd conda
