--- a/travis.yml
+++ b/travis.yml
@@ -21,7 +21,9 @@ matrix:
     - os: osx
       osx_image: xcode7.2   
       env: BUILD_TARGETS="python-scons"
-
+  allow_failures:
+    - os: osx
+    
 install:
   - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
   - cd config-travis
