--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,15 +23,15 @@ build_script:
   
 on_success:
   - cd conda
-  #- call install.bat
-  #- cd ..
-  #- call pkgtk authors
-  #- cd conda
-  #- powershell -Command "(gc bld.bat) -replace 'build --no-test', 'build' | Out-File bld.bat"
-  #- more bld.bat >> tmp.bat
-  #- del bld.bat
-  #- more tmp.bat >> bld.bat
-  #- set BUILD_TARGETS=python-pkgtk
-  #- '%CMD_IN_ENV% call bld.bat'
+  - call install.bat
+  - cd ..
+  - call pkgtk authors
+  - cd conda
+  - powershell -Command "(gc bld.bat) -replace 'build --no-test', 'build' | Out-File bld.bat"
+  - more bld.bat >> tmp.bat
+  - del bld.bat
+  - more tmp.bat >> bld.bat
+  - set BUILD_TARGETS=python-pkgtk
+  - '%CMD_IN_ENV% call bld.bat'
   - if "%APPVEYOR_REPO_BRANCH%"=="master" if not "%ANACONDA_USERNAME%"=="" if not "%ANACONDA_PASSWORD%"=="" call upload.bat
   - cd ..
