--- a/travis.yml
+++ b/travis.yml
@@ -21,8 +21,17 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
+      env: MINICONDA="2"
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: MINICONDA="3"
     - os: osx
       osx_image: xcode7.2
+      env: MINICONDA="2"
+    - os: osx
+      osx_image: xcode7.2
+      env: MINICONDA="3"
   allow_failures:
     - os: osx
 
