--- a/travis.yml
+++ b/travis.yml
@@ -51,7 +51,7 @@ script:
 
 after_success:
   - cd conda
-  - if [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ "$MINICONDA" = "2" ]]; then
+  - if [[ "$TRAVIS_OS_NAME" = "linux" ]]; then
       bash install.sh;
       cd ..;
       pkgtk authors;
@@ -60,7 +60,9 @@ after_success:
       export BUILD_TARGETS="python-pkgtk";
       bash build.sh;
       cd ..;
-      coveralls --config_file=.coveragerc;
+      if [[ "$MINICONDA" = "2" ]]; then
+        coveralls --config_file=.coveragerc;
+      fi
       cd conda;
     fi
   - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]] && [[ ! -z $ANACONDA_PASSWORD ]]; then
