--- a/travis.yml
+++ b/travis.yml
@@ -5,11 +5,27 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-      env: BUILD_TARGETS="libboost"
+      env:
+        - BUILD_TARGETS="libboost"
+        - MINICONDA="2"
     - os: linux
       dist: trusty
       sudo: required
-      env: BUILD_TARGETS="python-scons"
+      env:
+        - BUILD_TARGETS="libboost"
+        - MINICONDA="3"
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: 
+        - BUILD_TARGETS="python-scons"
+        - MINICONDA="2"
+    - os: linux
+      dist: trusty
+      sudo: required
+      env:
+        - BUILD_TARGETS="python-scons"
+        - MINICONDA="3"
     - os: linux
       dist: trusty
       sudo: required
@@ -17,10 +33,24 @@ matrix:
         - docker
     - os: osx
       osx_image: xcode7.2
-      env: BUILD_TARGETS="libboost"
+      env: 
+        - BUILD_TARGETS="libboost"
+        - MINICONDA="2"
+    - os: osx
+      osx_image: xcode7.2
+      env: 
+        - BUILD_TARGETS="libboost"
+        - MINICONDA="3"
     - os: osx
       osx_image: xcode7.2   
-      env: BUILD_TARGETS="python-scons"
+      env: 
+        - BUILD_TARGETS="python-scons"
+        - MINICONDA="2"
+    - os: osx
+      osx_image: xcode7.2   
+      env: 
+        - BUILD_TARGETS="python-scons"
+        - MINICONDA="3"
   allow_failures:
     - os: osx
     
