--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,9 +9,14 @@ environment:
       MINICONDA: "3"
     - BUILD_TARGETS: python-scons
       MINICONDA: "2"
-    #- BUILD_TARGETS: python-scons    
-    #  MINICONDA: "3"
+    - BUILD_TARGETS: python-scons    
+      MINICONDA: "3"
 
+matrix:
+  allow_failures:
+    - BUILD_TARGETS: python-scons    
+    - MINICONDA: "3"
+    
 install:
   - git clone https://gist.github.com/a08b6eb1c97fad864de50601d70008c8.git config-appveyor
   - cd config-appveyor
