--- a/travis.yml
+++ b/travis.yml
@@ -67,7 +67,9 @@ script:
       bash build.sh;
       cd ..;
     else
-      docker build -t statiskit/ubuntu .;
+      docker build -t statiskit/ubuntu:14.04 .;
+      sed -i'' -e 's#FROM ubuntu:14.04#FROM ubuntu:16.04#g';
+      docker build -t statiskit/ubuntu:16.04 .;
     fi
 
 after_success:
@@ -78,5 +80,6 @@ after_success:
     fi
   - if [[ "$BUILD_TARGETS" = "" ]] && [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]] && [[ ! -z $DOCKER_PASSWORD ]]; then
       docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-      docker push statiskit/ubuntu;
+      docker push statiskit/ubuntu:14.04;
+      docker push statiskit/ubuntu:16.04;
     fi
