--- a/travis.yml
+++ b/travis.yml
@@ -68,7 +68,7 @@ script:
       cd ..;
     else
       docker build -t statiskit/ubuntu:14.04 .;
-      sed -i'' -e 's#FROM ubuntu:14.04#FROM ubuntu:16.04#g';
+      sed -i'' -e 's#FROM ubuntu:14.04#FROM ubuntu:16.04#g' Dockerfile;
       docker build -t statiskit/ubuntu:16.04 .;
     fi
 
