--- a/conda/python-scons/meta.yaml
+++ b/conda/python-scons/meta.yaml
@@ -3,11 +3,9 @@ package:
   version: "2.5.0"
 
 source:
-  #fn: scons-2.5.0.tar.gz
-  #url: https://pypi.python.org/packages/source/S/SCons/scons-2.5.0.tar.gz
-  #md5: bda5530a70a41a7831d83c8b191c021e
-  hg_url: https://hg@bitbucket.org/scons/scons
-  #hg_url: ssh://hg@bitbucket.org/scons/scons
+  fn: scons-2.5.0.tar.gz
+  url: https://pypi.python.org/packages/source/S/SCons/scons-2.5.0.tar.gz
+  md5: bda5530a70a41a7831d83c8b191c021e
 
 build:
   number: 0
