--- a/travis.yml
+++ b/travis.yml
@@ -46,11 +46,11 @@ matrix:
       env: 
         - BUILD_TARGETS="python-scons"
         - MINICONDA="2"
-    # - os: osx
-    #   osx_image: xcode7.2   
-    #   env: 
-    #     - BUILD_TARGETS="python-scons"
-    #     - MINICONDA="3"
+    - os: osx
+      osx_image: xcode7.2   
+      env: 
+        - BUILD_TARGETS="python-scons"
+        - MINICONDA="3"
   allow_failures:
     - os: osx
     
