--- a/travis.yml
+++ b/travis.yml
@@ -43,10 +43,9 @@ install:
   
 script:
   - cd conda
-  - export ANACONDA_FLAGS="--no-test"
+  - export ANACONDA_BUILD_FLAGS="--no-test"
   - bash build.sh
   - cd ..
-  - export ANACONDA_FLAGS=""
 
 after_success:
   - if [[ "$TRAVIS_OS_NAME" = "osx" ]]; then
@@ -57,6 +56,7 @@ after_success:
   - cd ..;
   - pkgtk authors;
   - cd conda;
+  - export ANACONDA_BUILD_FLAGS="--test"
   - export BUILD_TARGETS="python-pkgtk";
   - bash build.sh;
   - cd ..;
