--- a/conda/python-pkgtk/meta.yaml
+++ b/conda/python-pkgtk/meta.yaml
@@ -48,7 +48,7 @@ test:
         - coverage
     commands:
         - cd {{ SRC_DIR }}
-        - nosetests test -x -s -v --with-coverage --cover-tests --cover-package=pkgtk --cover-package=test
+        - nosetests test -x -s -v --with-coverage --cover-tests --cover-package=pkgtk
         - REPOSITORY_DIR=`readlink -e $RECIPE_DIR/../..` # [not win]
         - sed -i'' -e 's|'"$PREFIX"'/lib/python2.7/site-packages/PkgTk-0.0.0-py2.7.egg|'"$REPOSITORY_DIR"'/src/py|g' .coverage # [not win]
         - sed -i'' -e 's|'"$SRC_DIR"'|'"$REPOSITORY_DIR"'|g' .coverage # [not win]
