--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ on_success:
   - call pkgtk authors
   - cd conda
   - set BUILD_TARGETS=python-pkgtk
-  - set ANACONDA_BUILD_FLAGS=--test
+  - set "ANACONDA_BUILD_FLAGS="
   - '%CMD_IN_ENV% call bld.bat'
   - if "%APPVEYOR_REPO_BRANCH%"=="master" if not "%ANACONDA_USERNAME%"=="" if not "%ANACONDA_PASSWORD%"=="" call upload.bat
   - cd ..
