--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
     - MINICONDA: "2"
 
 cache:
-  - ..\cache
+  - '%CONDA_CACHE_DIR%'
 
 artifacts:
   - path: ..\cache
@@ -26,7 +26,7 @@ build_script:
   - cd conda
   - '%CMD_IN_ENV% call bld.bat'
   - cd ..
-   - dir %CONDA_CACHE_DIR%
+  - dir %CONDA_CACHE_DIR%
 
 on_success:
   - del test\test_about.py
