--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ build_script:
   - '%CMD_IN_ENV% call bld.bat'
   - cd ..
   - dir %CONDA_CACHE_DIR%
-  - xcopy %CONDA_CACHE_DIR% %APPVEYOR_BUILD_FOLDER%\cache /s /e /h
+  - xcopy %CONDA_CACHE_DIR% %APPVEYOR_BUILD_FOLDER%\cache /s/h/e/k/f/c
 
 on_success:
   - del test\test_about.py
