--- a/travis.yml
+++ b/travis.yml
@@ -29,6 +29,12 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
+      env: 
+        - BUILD_TARGETS="python-gitpython"
+        - MINICONDA="2"
+    - os: linux
+      dist: trusty
+      sudo: required
       services:
         - docker
     - os: osx
@@ -51,7 +57,12 @@ matrix:
       env: 
         - BUILD_TARGETS="python-scons"
         - MINICONDA="3"
-    
+    - os: osx
+      osx_image: xcode7.2   
+      env: 
+        - BUILD_TARGETS="python-gitpython"
+        - MINICONDA="2"    
+        
 install:
   - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
   - cd config-travis
