--- a/conda/python-gitpython/meta.yaml
+++ b/conda/python-gitpython/meta.yaml
@@ -7,7 +7,7 @@ source:
   url: https://github.com/gitpython-developers/GitPython/archive/2.0.9.tar.gz
 
 build:
-  script: python setup.py install
+  script: python setup.py install --single-version-externally-managed --record=record.txt
   number: 0
 
 requirements:
