--- a/travis.yml
+++ b/travis.yml
@@ -30,6 +30,12 @@ matrix:
       dist: trusty
       sudo: required
       env: 
+        - BUILD_TARGETS="ncurses"
+        - MINICONDA="2"
+    - os: linux
+      dist: trusty
+      sudo: required
+      env: 
         - BUILD_TARGETS="python-gitpython"
         - MINICONDA="2"
     - os: linux
@@ -57,6 +63,11 @@ matrix:
       env: 
         - BUILD_TARGETS="python-scons"
         - MINICONDA="3"
+    - os: osx
+      osx_image: xcode7.2   
+      env: 
+        - BUILD_TARGETS="ncurses"
+        - MINICONDA="2"
     - os: osx
       osx_image: xcode7.2   
       env: 
