--- a/conda/ncurses/meta.yaml
+++ b/conda/ncurses/meta.yaml
@@ -11,23 +11,97 @@ source:
   patches:
     # http://lists.gnu.org/archive/html/bug-ncurses/2011-04/txtkWQqiQvcZe.txt
     - fix.patch
+    # http://lists.gnu.org/archive/html/bug-ncurses/2015-01/msg00016.html
+    - ncurses-5.9-gcc-5.patch
 
 build:
   skip: true  # [win]
-  number: 0
+  number: 9
   detect_binary_files_with_prefix: true
 
+requirements:
+  build:
+    - toolchain
+    - pkg-config
+
 test:
+  requires:
+    - pkg-config
   files:
     - run_test.sh         # [osx]
     - run_test.py         # [osx]
   commands:
-    - exit $(test -f ${PREFIX}/lib/libncurses.a)
-    - exit $(test -f ${PREFIX}/lib/libtinfo.a)
-    - exit $(test -f ${PREFIX}/lib/libform.a)
-    - exit $(test -f ${PREFIX}/lib/libmenu.a)
-    - exit $(test -f ${PREFIX}/lib/libpanel.a)
+    # Test libraries
+    {% set ncurses_libraries = [
+        "libncurses",
+        "libtinfo",
+        "libform",
+        "libmenu",
+        "libpanel",
+    ] %}
+    {% for each_ncurses_library in ncurses_libraries %}
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.a
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}w.a
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.dylib    # [osx]
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}w.dylib   # [osx]
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.so       # [linux]
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}w.so      # [linux]
+    {% endfor %}
 
+    # Test include directories
+    - test -d ${PREFIX}/include/ncurses
+    - test -d ${PREFIX}/include/ncursesw
+
+    # Test headers
+    {% set ncurses_headers = [
+        "curses.h",
+        "cursesapp.h",
+        "cursesf.h",
+        "cursesm.h",
+        "cursesp.h",
+        "cursesw.h",
+        "cursslk.h",
+        "eti.h",
+        "etip.h",
+        "form.h",
+        "menu.h",
+        "nc_tparm.h",
+        "ncurses.h",
+        "ncurses_dll.h",
+        "panel.h",
+        "term.h",
+        "term_entry.h",
+        "termcap.h",
+        "tic.h",
+        "unctrl.h"
+    ] %}
+    {% for each_ncurses_header in ncurses_headers %}
+    - test -L ${PREFIX}/include/ncurses/{{ each_ncurses_header }}
+    - test -L ${PREFIX}/include/ncursesw/{{ each_ncurses_header }}
+    - test -f ${PREFIX}/include/{{ each_ncurses_header }}
+    {% endfor %}
+
+    # Test pkg-config files
+    {% set ncurses_pc_files = [
+        "form",
+        "menu",
+        "ncurses++",
+        "ncurses",
+        "panel",
+        "tinfo"
+    ] %}
+    {% for each_ncurses_pc_file in ncurses_pc_files %}
+    - test -f ${PREFIX}/lib/pkgconfig/{{ each_ncurses_pc_file }}.pc
+    - test -f ${PREFIX}/lib/pkgconfig/{{ each_ncurses_pc_file }}w.pc
+    {% endfor %}
+
+    # Test ncurses library arguments.
+    - pkg-config ncursesw --libs | grep "^-L${PREFIX}/lib -lncursesw -ltinfow $"
+    - pkg-config tinfow --libs | grep "^-L${PREFIX}/lib -ltinfow $"
+    - pkg-config ncurses --libs | grep "^-L${PREFIX}/lib -lncurses -ltinfo $"
+    - pkg-config tinfo --libs | grep "^-L${PREFIX}/lib -ltinfo $"
+
+    # Usage tests
     - bash run_test.sh    # [osx]
     - python run_test.py  # [osx]
 
@@ -39,3 +113,4 @@ about:
 extra:
   recipe-maintainers:
     - jakirkham
+    - jjhelmus
