--- a/conda/ncurses/meta.yaml
+++ b/conda/ncurses/meta.yaml
@@ -16,17 +16,10 @@ source:
 
 build:
   skip: true  # [win]
-  number: 0
+  number: 5
   detect_binary_files_with_prefix: true
 
-requirements:
-  build:
-    - toolchain
-    - pkg-config
-
 test:
-  requires:
-    - pkg-config
   files:
     - run_test.sh         # [osx]
     - run_test.py         # [osx]
@@ -38,14 +31,16 @@ test:
         "libform",
         "libmenu",
         "libpanel",
+        "libncursesw",
+        "libtinfow",
+        "libformw",
+        "libmenuw",
+        "libpanelw"
     ] %}
     {% for each_ncurses_library in ncurses_libraries %}
     - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.a
-    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}w.a
-    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.dylib    # [osx]
-    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}w.dylib   # [osx]
-    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.so       # [linux]
-    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}w.so      # [linux]
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.dylib   # [osx]
+    - test -f ${PREFIX}/lib/{{ each_ncurses_library }}.so      # [linux]
     {% endfor %}
 
     # Test include directories
@@ -80,26 +75,6 @@ test:
     - test -L ${PREFIX}/include/ncursesw/{{ each_ncurses_header }}
     - test -f ${PREFIX}/include/{{ each_ncurses_header }}
     {% endfor %}
-
-    # Test pkg-config files
-    {% set ncurses_pc_files = [
-        "form",
-        "menu",
-        "ncurses++",
-        "ncurses",
-        "panel",
-        "tinfo"
-    ] %}
-    {% for each_ncurses_pc_file in ncurses_pc_files %}
-    - test -f ${PREFIX}/lib/pkgconfig/{{ each_ncurses_pc_file }}.pc
-    - test -f ${PREFIX}/lib/pkgconfig/{{ each_ncurses_pc_file }}w.pc
-    {% endfor %}
-
-    # Test ncurses library arguments.
-    - pkg-config ncursesw --libs | grep "^-L${PREFIX}/lib -lncursesw -ltinfow $"
-    - pkg-config tinfow --libs | grep "^-L${PREFIX}/lib -ltinfow $"
-    - pkg-config ncurses --libs | grep "^-L${PREFIX}/lib -lncurses -ltinfo $"
-    - pkg-config tinfo --libs | grep "^-L${PREFIX}/lib -ltinfo $"
 
     # Usage tests
     - bash run_test.sh    # [osx]
