--- a/conda/tk/meta.yaml
+++ b/conda/tk/meta.yaml
@@ -1,28 +1,30 @@
-{% set version = "8.6.6" %}
+{% set version = "8.5.19" %}
 {% set maj_min = ".".join(version.split(".")[:2]) %}
 {% set majmin = "".join(version.split(".")[:2]) %}
-
-{% set VC_VERSION = os.environ.get('VC_VERSION', '9')|string %}
 
 package:
   name: tk
   version: {{ version }}
 
 build:
-  number: 3
+  number: 0
   detect_binary_files_with_prefix: true
   features:
-    - vc{{ VC_VERSION }}   # [win]
+    - vc9     # [win and py27]
+    - vc10    # [win and py34]
+    - vc14    # [win and py35]
 
 requirements:
   build:
+    - python         # [win]
     - curl           # [win]
     - 7za            # [win]
-    - vc {{ VC_VERSION }}  # [win]
-  run:
-    - vc {{ VC_VERSION }}  # [win]
 
 test:
+  requires:
+    - python 2.7.*   # [win and py27]
+    - python 3.4.*   # [win and py34]
+    - python 3.5.*   # [win and py35]
 
   files:
     - hello.tcl
@@ -53,8 +55,6 @@ test:
     {% endfor %}
 
     # Check for libraries.
-    # Library naming note: t means "full thread support" in Windows
-    #    https://sourceforge.net/p/tcl/mailman/tcl-bugs/thread/From_noreply@sourceforge.net_Mon_Jul_23_11:46:16_2012/
     {% set tcl_tk_libs = [
             "tcl",
             "tk"
@@ -63,8 +63,8 @@ test:
     - test -f "${PREFIX}/lib/lib{{ each_tcl_tk_lib }}{{ maj_min }}.dylib"                                        # [osx]
     - test -f "${PREFIX}/lib/lib{{ each_tcl_tk_lib }}{{ maj_min }}.so"                                           # [linux]
     - test -f "${PREFIX}/lib/lib{{ each_tcl_tk_lib }}stub{{ maj_min }}.a"                                        # [unix]
-    - if not exist %LIBRARY_PREFIX%\\lib\\{{ each_tcl_tk_lib }}{{ maj_min.replace(".", "") }}t.lib exit 1         # [win]
-    - if not exist %LIBRARY_PREFIX%\\bin\\{{ each_tcl_tk_lib }}{{ maj_min.replace(".", "") }}t.dll exit 1         # [win]
+    - if not exist %LIBRARY_PREFIX%\\lib\\{{ each_tcl_tk_lib }}{{ maj_min.replace(".", "") }}.lib exit 1         # [win]
+    - if not exist %LIBRARY_PREFIX%\\bin\\{{ each_tcl_tk_lib }}{{ maj_min.replace(".", "") }}.dll exit 1         # [win]
     - if not exist %LIBRARY_PREFIX%\\lib\\{{ each_tcl_tk_lib }}stub{{ maj_min.replace(".", "") }}.lib exit 1     # [win]
     {% endfor %}
 
@@ -73,13 +73,13 @@ test:
     - tclsh{{ maj_min }} hello.tcl                       # [unix]
     - wish hello.tcl
     - wish{{ maj_min }} hello.tcl                        # [unix]
-    - wish{{ maj_min.replace(".", "") }}t hello.tcl       # [win]
+    - wish{{ maj_min.replace(".", "") }} hello.tcl       # [win]
 
 about:
   home: http://www.tcl.tk/
   license: Tcl/Tk
   license_family: BSD
-  summary: A dynamic programming language with GUI support.  Bundles Tcl and Tk.
+  summary: A dynamic programming language with GUI support.
 
 extra:
   recipe-maintainers:
