--- a/travis.yml
+++ b/travis.yml
@@ -81,6 +81,7 @@ script:
     fi
 
 after_success:
+  - export ANACONDA_UPLOAD_FLAGS=" --force"
   - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]]; then
       cd conda;
       bash upload.sh;
