--- a/travis.yml
+++ b/travis.yml
@@ -35,6 +35,12 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
+      env: 
+        - BUILD_TARGETS="python-gitpython"
+        - MINICONDA="3"
+    - os: linux
+      dist: trusty
+      sudo: required
       services:
         - docker
     - os: osx
@@ -62,6 +68,11 @@ matrix:
       env: 
         - BUILD_TARGETS="python-gitpython"
         - MINICONDA="2"    
+    - os: osx
+      osx_image: xcode7.2   
+      env: 
+        - BUILD_TARGETS="python-gitpython"
+        - MINICONDA="3"    
         
 install:
   - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
