--- a/travis.yml
+++ b/travis.yml
@@ -1,94 +1,94 @@
 language: cpp
 
 matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-      env:
-        - BUILD_TARGETS="libboost"
-        - MINICONDA="2"
-    - os: linux
-      dist: trusty
-      sudo: required
-      env:
-        - BUILD_TARGETS="libboost"
-        - MINICONDA="3"
-    - os: linux
-      dist: trusty
-      sudo: required
-      env: 
-        - BUILD_TARGETS="python-scons"
-        - MINICONDA="2"
-    - os: linux
-      dist: trusty
-      sudo: required
-      env:
-        - BUILD_TARGETS="python-scons"
-        - MINICONDA="3"
-    - os: linux
-      dist: trusty
-      sudo: required
-      env: 
-        - BUILD_TARGETS="python-gitpython"
-        - MINICONDA="2"
-    - os: linux
-      dist: trusty
-      sudo: required
-      services:
-        - docker
-    - os: osx
-      osx_image: xcode7.2
-      env: 
-        - BUILD_TARGETS="libboost"
-        - MINICONDA="2"
-    - os: osx
-      osx_image: xcode7.2
-      env: 
-        - BUILD_TARGETS="libboost"
-        - MINICONDA="3"
-    - os: osx
-      osx_image: xcode7.2   
-      env: 
-        - BUILD_TARGETS="python-scons"
-        - MINICONDA="2"
-    - os: osx
-      osx_image: xcode7.2   
-      env: 
-        - BUILD_TARGETS="python-scons"
-        - MINICONDA="3"
-    - os: osx
-      osx_image: xcode7.2   
-      env: 
-        - BUILD_TARGETS="python-gitpython"
-        - MINICONDA="2"    
-        
+    include:
+        - os: linux
+            dist: trusty
+            sudo: required
+            env:
+                - BUILD_TARGETS="libboost"
+                - MINICONDA="2"
+        - os: linux
+            dist: trusty
+            sudo: required
+            env:
+                - BUILD_TARGETS="libboost"
+                - MINICONDA="3"
+        - os: linux
+            dist: trusty
+            sudo: required
+            env: 
+                - BUILD_TARGETS="python-scons"
+                - MINICONDA="2"
+        - os: linux
+            dist: trusty
+            sudo: required
+            env:
+                - BUILD_TARGETS="python-scons"
+                - MINICONDA="3"
+        - os: linux
+            dist: trusty
+            sudo: required
+            env: 
+                - BUILD_TARGETS="python-gitpython"
+                - MINICONDA="2"
+        - os: linux
+            dist: trusty
+            sudo: required
+            services:
+                - docker
+        - os: osx
+            osx_image: xcode7.2
+            env: 
+                - BUILD_TARGETS="libboost"
+                - MINICONDA="2"
+        - os: osx
+            osx_image: xcode7.2
+            env: 
+                - BUILD_TARGETS="libboost"
+                - MINICONDA="3"
+        - os: osx
+            osx_image: xcode7.2   
+            env: 
+                - BUILD_TARGETS="python-scons"
+                - MINICONDA="2"
+        - os: osx
+            osx_image: xcode7.2   
+            env: 
+                - BUILD_TARGETS="python-scons"
+                - MINICONDA="3"
+        - os: osx
+            osx_image: xcode7.2   
+            env: 
+                - BUILD_TARGETS="python-gitpython"
+                - MINICONDA="2"    
+                
 install:
-  - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
-  - cd config-travis
-  - source config.sh
-  - cd ..
+    - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
+    - cd config-travis
+    - source config.sh
+    - cd ..
 
 script:
-  - if [[ ! -z $BUILD_TARGETS ]]; then
-      cd conda;
-      bash build.sh;
-      cd ..;
-    else
-      docker build -t statiskit/ubuntu:14.04 .;
-      sed -i'' -e 's#FROM ubuntu:14.04#FROM ubuntu:16.04#g' Dockerfile;
-      docker build -t statiskit/ubuntu:16.04 .;
-    fi
+    -   if [[ ! -z $BUILD_TARGETS ]]; then
+            cd conda;
+            bash build.sh;
+            cd ..;
+        else
+            cd docker;
+            bash build.sh;
+            cd ..;
+        fi
 
 after_success:
-  - export ANACONDA_UPLOAD_OPTIONS="--force"
-  - if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]]; then
-      cd conda;
-      bash upload.sh;
-      cd ..;
-    fi
-  - if [[ "$BUILD_TARGETS" = "" ]] && [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]]; then
-      docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-      docker push statiskit/ubuntu:14.04;
-      docker push statiskit/ubuntu:16.04;
-    fi
+    - export ANACONDA_UPLOAD_OPTIONS="--force"
+    -   if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]]; then
+            cd conda;
+            bash upload.sh;
+            cd ..;
+        fi
+    -   if [[ "$BUILD_TARGETS" = "" ]] && [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]]; then
+            cd docker;
+            bash upload.sh;
+            cd ..;
+        fi
