--- a/travis.yml
+++ b/travis.yml
@@ -2,86 +2,86 @@ language: cpp
 
 matrix:
     include:
-        - os: linux
+        -   os: linux
             dist: trusty
             sudo: required
             env:
-                - BUILD_TARGETS="libboost"
+                - ANACONDA_BUILD_RECIPES="libboost"
                 - MINICONDA="2"
-        - os: linux
+        -   os: linux
             dist: trusty
             sudo: required
             env:
-                - BUILD_TARGETS="libboost"
+                - ANACONDA_BUILD_RECIPES="libboost"
                 - MINICONDA="3"
-        - os: linux
+        -   os: linux
             dist: trusty
             sudo: required
             env: 
-                - BUILD_TARGETS="python-scons"
+                - ANACONDA_BUILD_RECIPES="python-scons"
                 - MINICONDA="2"
-        - os: linux
+        -   os: linux
             dist: trusty
             sudo: required
             env:
-                - BUILD_TARGETS="python-scons"
+                - ANACONDA_BUILD_RECIPES="python-scons"
                 - MINICONDA="3"
-        - os: linux
+        -   os: linux
             dist: trusty
             sudo: required
             env: 
-                - BUILD_TARGETS="python-gitpython"
+                - ANACONDA_BUILD_RECIPES="python-gitpython"
                 - MINICONDA="2"
-        - os: linux
+        -   os: linux
             dist: trusty
             sudo: required
             env: 
-                - BUILD_TARGETS="python-gitpython"
+                - ANACONDA_BUILD_RECIPES="python-gitpython"
                 - MINICONDA="3"
-        - os: linux
+        -   os: linux
             dist: trusty
             sudo: required
             services:
                 - docker
-        - os: osx
+        -   os: osx
             osx_image: xcode7.2
             env: 
-                - BUILD_TARGETS="libboost"
+                - ANACONDA_BUILD_RECIPES="libboost"
                 - MINICONDA="2"
-        - os: osx
+        -   os: osx
             osx_image: xcode7.2
             env: 
-                - BUILD_TARGETS="libboost"
+                - ANACONDA_BUILD_RECIPES="libboost"
                 - MINICONDA="3"
-        - os: osx
+        -   os: osx
             osx_image: xcode7.2   
             env: 
-                - BUILD_TARGETS="python-scons"
+                - ANACONDA_BUILD_RECIPES="python-scons"
                 - MINICONDA="2"
-        - os: osx
+        -   os: osx
             osx_image: xcode7.2   
             env: 
-                - BUILD_TARGETS="python-scons"
+                - ANACONDA_BUILD_RECIPES="python-scons"
                 - MINICONDA="3"
-        - os: osx
+        -   os: osx
             osx_image: xcode7.2   
             env: 
-                - BUILD_TARGETS="python-gitpython"
+                - ANACONDA_BUILD_RECIPES="python-gitpython"
                 - MINICONDA="2"    
-        - os: osx
+        -   os: osx
             osx_image: xcode7.2   
             env: 
-                - BUILD_TARGETS="python-gitpython"
+                - ANACONDA_BUILD_RECIPES="python-gitpython"
                 - MINICONDA="3"    
   
 install:
-    - git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
-    - cd config-travis
-    - source config.sh
-    - cd ..
+    -   git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
+    -   cd config-travis
+    -   source config.sh
+    -   cd ..
 
 script:
-    -   if [[ ! -z $BUILD_TARGETS ]]; then
+    -   if [[ ! -z $ANACONDA_BUILD_RECIPES ]]; then
             cd conda;
             bash build.sh;
             cd ..;
@@ -92,13 +92,13 @@ script:
         fi
 
 after_success:
-    - export ANACONDA_UPLOAD_OPTIONS="--force"
+    -   export ANACONDA_UPLOAD_OPTIONS="--force"
     -   if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]]; then
             cd conda;
             bash upload.sh;
             cd ..;
         fi
-    -   if [[ "$BUILD_TARGETS" = "" ]] && [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]]; then
+    -   if [[ "$ANACONDA_BUILD_RECIPES" = "" ]] && [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ "$TRAVIS_OS_NAME" = "linux" ]] && [[ ! -z $DOCKER_USERNAME ]]; then
             cd docker;
             bash upload.sh;
             cd ..;
