--- a/travis.yml
+++ b/travis.yml
@@ -92,7 +92,7 @@ script:
         fi
 
 after_success:
-    -   export ANACONDA_UPLOAD_OPTIONS="--force"
+    -   export ANACONDA_UPLOAD_FLAGS="--force"
     -   if [[ "$TRAVIS_BRANCH" = "master" ]] && [[ "$TRAVIS_PULL_REQUEST" = "false" ]] && [[ ! -z $ANACONDA_USERNAME ]]; then
             cd conda;
             bash upload.sh;
