--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,7 +31,7 @@ ENV PATH /home/main/miniconda2/bin:$PATHBACK
 RUN conda config --set always_yes yes --set changeps1 no
 RUN conda update -q conda
 RUN conda info -a
-RUN conda install conda-build anaconda-client ipython jupyter
+RUN conda install conda-build=1 anaconda-client ipython jupyter
 RUN mkdir $HOME/miniconda2/conda-bld
 RUN mkdir $HOME/miniconda2/conda-bld/linux-64
 
@@ -47,7 +47,7 @@ ENV PATH /home/main/miniconda3/bin:$PATHBACK
 RUN conda config --set always_yes yes --set changeps1 no
 RUN conda update -q conda
 RUN conda info -a
-RUN conda install conda-build anaconda-client ipython jupyter
+RUN conda install conda-build=1 anaconda-client ipython jupyter
 RUN mkdir $HOME/miniconda3/conda-bld
 RUN mkdir $HOME/miniconda3/conda-bld/linux-64
 
