--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,11 @@ environment:
             MINICONDA: "2"
         -   ANACONDA_BUILD_RECIPES: libboost
             MINICONDA: "3"
-        
+        -   ANACONDA_BUILD_RECIPES: doxygen
+            MINICONDA: "2"
+        -   ANACONDA_BUILD_RECIPES: doxygen    
+            MINICONDA: "3"
+            
 install:
     -   git clone https://gist.github.com/a08b6eb1c97fad864de50601d70008c8.git config-appveyor
     -   cd config-appveyor
