--- a/travis.yml
+++ b/travis.yml
@@ -5,87 +5,18 @@ matrix:
         -   os: linux
             dist: trusty
             sudo: required
-            env:
-                - ANACONDA_BUILD_RECIPES="libboost"
-                - MINICONDA="2"
-        -   os: linux
-            dist: trusty
-            sudo: required
-            env:
-                - ANACONDA_BUILD_RECIPES="libboost"
-                - MINICONDA="3"
-        -   os: linux
-            dist: trusty
-            sudo: required
-            env: 
-                - ANACONDA_BUILD_RECIPES="python-scons"
-                - MINICONDA="2"
-        -   os: linux
-            dist: trusty
-            sudo: required
-            env:
-                - ANACONDA_BUILD_RECIPES="python-scons"
-                - MINICONDA="3"
-        -   os: linux
-            dist: trusty
-            sudo: required
-            env: 
-                - ANACONDA_BUILD_RECIPES="python-gitpython"
-                - MINICONDA="2"
-        -   os: linux
-            dist: trusty
-            sudo: required
-            env: 
-                - ANACONDA_BUILD_RECIPES="python-gitpython"
-                - MINICONDA="3"
-        -   os: linux
-            dist: trusty
-            sudo: required
-            env:
-                - ANACONDA_BUILD_RECIPES="doxygen"
-                - MINICONDA="2"
-        -   os: linux
-            dist: trusty
-            sudo: required
-            env:
-                - ANACONDA_BUILD_RECIPES="doxygen"
-                - MINICONDA="3"
         -   os: linux
             dist: trusty
             sudo: required
             services:
                 - docker
         -   os: osx
-            osx_image: xcode7.2
-            env: 
-                - ANACONDA_BUILD_RECIPES="libboost"
-                - MINICONDA="2"
-        -   os: osx
-            osx_image: xcode7.2
-            env: 
-                - ANACONDA_BUILD_RECIPES="libboost"
-                - MINICONDA="3"
-        -   os: osx
-            osx_image: xcode7.2   
-            env: 
-                - ANACONDA_BUILD_RECIPES="python-scons"
-                - MINICONDA="2"
-        -   os: osx
-            osx_image: xcode7.2   
-            env: 
-                - ANACONDA_BUILD_RECIPES="python-scons"
-                - MINICONDA="3"
-        -   os: osx
-            osx_image: xcode7.2   
-            env: 
-                - ANACONDA_BUILD_RECIPES="python-gitpython"
-                - MINICONDA="2"    
-        -   os: osx
-            osx_image: xcode7.2   
-            env: 
-                - ANACONDA_BUILD_RECIPES="python-gitpython"
-                - MINICONDA="3"    
+            osx_image: xcode7.3
   
+ - gmp
+ - mpfr # no test
+ - mpc
+
 install:
     -   git clone https://gist.github.com/319558c83d145620a6d4decdcadfbfb0.git config-travis
     -   cd config-travis
