--- a/conda/gmp/meta.yaml
+++ b/conda/gmp/meta.yaml
@@ -1,11 +1,10 @@
 package:
   name: gmp
-  version: "6.1.0"
+  version: "4.3.2"
 
 source:
-  fn: gmp-6.1.0.tar.bz2
-  url: ftp://ftp.gnu.org/gnu/gmp/gmp-6.1.0.tar.bz2
-  md5: 86ee6e54ebfc4a90b643a65e402c4048
+  fn: gmp-4.3.2.tar.bz2
+  url: ftp://gcc.gnu.org/pub/gcc/infrastructure/gmp-4.3.2.tar.bz2
 
 build:
   number: 1
