--- a/conda/mpfr/meta.yaml
+++ b/conda/mpfr/meta.yaml
@@ -1,18 +1,16 @@
 package:
   name: mpfr
-  version: "3.1.3"
+  version: "2.4.2"
 
 source:
-  fn: mpfr-3.1.3.tar.bz2
-  url: http://www.mpfr.org/mpfr-3.1.3/mpfr-3.1.3.tar.bz2
-  md5: 5fdfa3cfa5c86514ee4a241a1affa138
+  fn: mpfr-2.4.2.tar.bz2
+  url: ftp://gcc.gnu.org/pub/gcc/infrastructure/mpfr-2.4.2.tar.bz2
 
 requirements:
   build:
     - gmp
   run:
     - gmp
-
 
 about:
   home: http://www.mpfr.org/
