--- a/conda/py-test/meta.yaml
+++ b/conda/py-test/meta.yaml
@@ -15,7 +15,7 @@
 ##################################################################################
 
 package:
-  name: py-build
+  name: py-test
   version: "1.0.0"
     
 build:
@@ -28,9 +28,9 @@ about:
 requirements:
   build:
     - python
-    - python-scons
-    - python-pkgtk
+    - nose
+    - coverage
   run:
     - python
-    - python-scons
-    - python-pkgtk
+    - nose
+    - coverage
